[package]
name = "day3"
version = "0.1.0"
authors = ["Martin Howarth <martin.howarth@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reduce = "0.1.3"
# https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html
utils = {path = "../utils"}
